--- a/horary78-main/backend/requirements.txt
+++ b/horary78-main/backend/requirements.txt
@@ -22,6 +22,7 @@ gunicorn==21.2.0
 
 # Development dependencies
 python-dotenv==1.0.0
+watchdog>=3.0.0
 
 # Building executables
 pyinstaller==6.1.0
